k8s/20-users-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: fcg
spec:
  replicas: 2
  selector:
    matchLabels: { app: users-api }
  template:
    metadata:
      labels: { app: users-api }
    spec:
      containers:
        - name: users-api
          image: fcg/users-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: fcg
spec:
  type: ClusterIP
  selector: { app: users-api }
  ports:
    - port: 8080
      targetPort: 8080
