k8s/22-payments-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
  namespace: fcg
spec:
  replicas: 2
  selector:
    matchLabels: { app: payments-api }
  template:
    metadata:
      labels: { app: payments-api }
    spec:
      containers:
        - name: payments-api
          image: fcg/payments-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  namespace: fcg
spec:
  type: ClusterIP
  selector: { app: payments-api }
  ports:
    - port: 8080
      targetPort: 8080
